src/test/ui/keyword/extern/keyword-extern-as-identifier-type.stderr
error: expected `fn`, found `::`
  --> $DIR/keyword-extern-as-identifier-type.rs:1:16
   |
LL | type A = extern::foo::bar;
   |                ^^ expected `fn` here

error: aborting due to previous error

