src/test/ui/keyword/extern/keyword-extern-as-identifier-type.rs
type A = extern::foo::bar; //~ ERROR expected `fn`, found `::`

fn main() {}
